--- a/NoeWebApp/web/index.html
+++ b/NoeWebApp/web/index.html
@@ -8,7 +8,7 @@ and open the template in the editor.
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; URL=/home" />
+        <meta http-equiv="refresh" content="1; URL=home" />
     </head>
     <body>
         <div>TODO write content</div>
