ajout logo pages existantes, mot de passe oublié, nous ecrire, footer

--- a/Progressus/NousEcrire.html
+++ b/Progressus/NousEcrire.html
@@ -24,7 +24,7 @@
 	<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
 </head>
-
+<header id="head" class="secondary"></header>
 
 <body class="home">
 	<!-- Fixed navbar -->
@@ -45,83 +45,13 @@
 		</div>
 	</div> 
 	<!-- /.navbar -->
-
-
-
-	<header id="head" class="secondary"></header>
-
-	<!-- container -->
-	<div class="container">
-
-		<ol class="breadcrumb">
-			<li><a href="index.html">Page d'accueil</a></li>
-			<li class="active">Inscription</li>
-		</ol>
-
-		<div class="row">
-			
-			<!-- Article main content -->
-			<article class="col-xs-12 maincontent">
-				<header class="page-header">
-					<h1 class="page-title">Inscription</h1>
-				</header>
-				
-				<div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-					<div class="panel panel-default">
-						<div class="panel-body">
-							<h3 class="thin text-center">Créer un nouveau compte</h3>							<hr>
-
-							<form>
-								<div class="top-margin">
-									<label>Nom</label>
-									<input type="text" class="form-control">
-								</div>
-								<div class="top-margin">
-									<label>Prénom</label>
-									<input type="text" class="form-control">
-								</div>
-								<div class="top-margin">
-									<label>Adresse e-mail <span class="text-danger">*</span></label>
-									<input type="text" class="form-control">
-								</div>
-
-								<div class="row top-margin">
-									<div class="col-sm-6">
-										<label>Mot de passe <span class="text-danger">*</span></label>
-										<input type="text" class="form-control">
-									</div>
-									<div class="col-sm-6">
-										<label>Confirmer mot de passe <span class="text-danger">*</span></label>
-										<input type="text" class="form-control">
-									</div>
-								</div>
-
-								<hr>
-
-								<div class="row">
-									<div class="col-lg-8">
-										<label class="checkbox">
-											<input type="checkbox"> 
-											J'ai bien lu les <a href="page_terms.html">termes de conditions</a>
-										</label>                        
-									</div>
-									<div class="col-lg-4 text-right">
-										<button class="btn btn-action" type="submit"><a href="confirmationInsc.html">Enregistrer</a></button>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-
-				</div>
-				
-			</article>
-			<!-- /Article -->
-
-		</div>
-	</div>	<!-- /container -->
-	
-
+	<div class="container text-center">	
+		<h2 class="thin">Votre message a bien été pris en compte, nous vous répondrons au plus vite !</h2>
+		</br>
+		</br>
+		<p><a class="btn btn-action btn-lg" role="button" href="index.html">Retour</a></p>
+	</div>
+</body>
 <footer id="footer" class="top-space">
 
 		<div class="footer1">
@@ -158,7 +88,6 @@
 						</div>
 					</div>
 
-
 				</div> <!-- /row of widgets -->
 			</div>
 		</div>
@@ -191,16 +120,5 @@
 		</div>
 
 	</footer>	
-		
-
-
-
-
-	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-	<script src="assets/js/headroom.min.js"></script>
-	<script src="assets/js/jQuery.headroom.min.js"></script>
-	<script src="assets/js/template.js"></script>
-</body>
 </html>
+	
