--- a/Progressus/contact.html
+++ b/Progressus/contact.html
@@ -33,7 +33,7 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="" alt="logo arche"></a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Arche de Noe"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -94,8 +94,11 @@
 								<label class="checkbox"><input type="checkbox"> S'abonner au newsletter</label>
 							</div>
 							<div class="col-sm-6 text-right">
-								<input class="btn btn-action" type="submit" value="Envoyer message">
-							</div>
+								<!-- <input class="btn btn-action" type="submit" value="Envoyer message" a href ="NousEcrire.html"></input> -->
+							
+							
+										<button class="btn btn-action" type="submit"><a href="NousEcrire.html">Envoyer message</a></button>
+									</div>
 						</div>
 					</form>
 
