--- a/Progressus/signin.html
+++ b/Progressus/signin.html
@@ -84,7 +84,7 @@
 
 								<div class="row">
 									<div class="col-lg-8">
-										<b><a href="">Mot de passe oublié?</a></b>
+										<b><a href="passwordForgotten.html">Mot de passe oublié?</a></b>
 									</div>
 									<div class="col-lg-4 text-right">
 										<button class="btn btn-action" type="submit"><a href="interface.html">Connexion</a></button>
