--- a/Progressus/index.html
+++ b/Progressus/index.html
@@ -38,7 +38,7 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand" href="index.html"><img src="" alt="logo arche"></a>
+				<a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Arche de Noe"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
@@ -149,7 +149,7 @@
 	<!-- /social links -->
 
 
-	<footer id="footer" class="top-space">
+		<footer id="footer" class="top-space">
 
 		<div class="footer1">
 			<div class="container">
