update d'index , ajout de site de stockage, ajout de taxinomie et modification de design pages Alertesentinelle, creationProjet, lot de semence

--- a/Progressus/Test Fonctionnalités/interface.html
+++ b/Progressus/Test Fonctionnalités/interface.html
@@ -44,3 +44,68 @@
 			</div><!--/.nav-collapse -->
 		</div>
 	</div> 
+	<!-- /.navbar -->
+	<header id="head" class="secondary"></header>
+<div display="bottom">
+<ul class="nav flex-column">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Comptes</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Altertes</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Projets</a>
+  </li>
+  
+   <li class="nav-item">
+    <a class="nav-link disabled" href="#">Sites de stockages</a>
+  </li>
+   <li class="nav-item">
+    <a class="nav-link disabled" href="#">Lots de semence</a>
+  </li>
+</ul>
+<div display ="right-side">
+      <table class="table">
+        <thead class="thead-light">
+          <tr>       n , 
+            <th>Nature de la demande</th>
+            <th>N° de la demande</th>
+            <th>Date de création</th>
+			<th>Statut</th>
+		
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><input></input></td>
+            <td><input></input></td>
+            <td><input></input></td>
+			<td><input></input></td>
+          </tr>
+          <tr>
+            <td><input></input></td>
+            <td></td>
+            <td></td> <td></td>
+          </tr>
+          <tr>
+            <td><input></input></td>
+            <td></td>
+            <td></td> <td></td>
+          </tr>
+		  <tr>
+            <td><input></input></td>
+            <td></td>
+            <td></td> <td></td>
+          </tr>
+        </tbody>
+      </table>
+</div>
+<div>
+	<p>
+		<a class="btn btn-action btn-lg" role="button" href="demande.html">Faire une demande</a>
+		<a class="btn btn-action btn-lg" role="button" href="supprimer.html">Supprimer</a>
+		<a class="btn btn-action btn-lg" role="button" href="modifier.html">Modifier la demande</a>
+
+		</p>
+</div>
