--- a/Progressus/passwordForgotten.html
+++ b/Progressus/passwordForgotten.html
@@ -56,7 +56,7 @@
 		<input type="text">
 		</br>
 		</br>
-		<p><a class="btn btn-action btn-lg" role="button" href="valider.html">Valider</a></p>		
+		<p><a class="btn btn-action btn-lg" role="button" href="validerReintisalisationMDP.html">Valider</a></p>		
 		
 	</div>
 	
