--- a/Progressus/index.html
+++ b/Progressus/index.html
@@ -6,7 +6,7 @@
 	
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
-	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
+	<meta name="author"      content="Ibtissame FRIKS (GetTemplate.com)">
 	
 	
 	<title>Projet Fil Rouge</title>
