project creation ongoing

--- a/NoeWebApp/web/index.html
+++ b/NoeWebApp/web/index.html
@@ -6,11 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Redirect</title>
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="1; URL=home" />
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>Redirect</div>
     </body>
 </html>
